--- a/bmi2/style.css
+++ b/bmi2/style.css
@@ -4,14 +4,21 @@
 
 html {
   font-family: "Oswald";
-  margin:0;
+
 /* Override UGG site */
 
 }
 
-body{
-	margin: 0
-}
+
+/* Override UGG site */
+#main {width: 100%; padding:0;}
+.content-asset p {margin:0 auto;}
+.breadcrumb {display:none;}
+
+/* Helpers */
+/**************************/
+.margin-top-10 {padding-top:10px;}
+.margin-bot-10 {padding-bottom:10px;}
 
 /*CONTENT*/
 
@@ -71,14 +78,7 @@ body{
 
 /*NAVBAR*/
 
-header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  border-bottom: 1px solid #e3e3e8;
-  background-color: white;
-}
+
 #logo {
   float: left;
   font-size: 3em;
@@ -124,42 +124,9 @@ nav ul li a:hover {
 }
 
 
-
-.box-list {
-  background: #119bc9;
-  overflow: hidden;
-}
-.box-list .box {
-  width: 25%;
-  float: left;
-  box-sizing: border-box;
-}
-.box-list:hover .box {
-  width: 20%;
-}
-.box {
-  min-height: 300px;
-  color: #fff;
-  transition: all 0.5s;
-  background-size: cover;
-}
-.box__inner {
-  padding: 20px;
-  min-height: 300px;
-  background-color: rgba(17, 155, 201, 0.7);
-
-
-}
-
-
-
-
 /*course*/
-
-
-
 .container {
-  width: 960px;
+  width: 800px;
   margin: 50px auto;
   padding: 5px;
   padding-left: 20px;
@@ -167,8 +134,8 @@ nav ul li a:hover {
 }
 
 .box_course {
-  width: 20%;
-  height: 700px;
+  width: 30%;
+  height: 680px;
   margin: 0.2%;
   padding: 15px;
   box-sizing: border-box;
@@ -227,3 +194,29 @@ nav ul li a:hover {
 }
 
 
+/*Course button*/
+.buttons-coll {
+  width: 90%;
+
+  text-align: center;
+}
+button {
+  margin: 20px;
+}
+.custom-btn {
+  padding: 10px 25px;
+  font-weight: 500;
+  background: transparent;
+  outline: none !important;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+/**** BTN No. 1 ****/
+.btn-1 {border: 0.5px solid #000;}
+.btn-1:hover {
+  background: #8DAEC3;
+  color: black;
+}
+.btn-1:active {top: 2px;}
