--- a/BIM_Venue/style.css
+++ b/BIM_Venue/style.css
@@ -135,7 +135,7 @@ nav ul li a:hover {
 
 .box_course {
   width: 30%;
-  height: 680px;
+  height: 600px;
   margin: 0.2%;
   padding: 15px;
   box-sizing: border-box;
@@ -196,7 +196,7 @@ nav ul li a:hover {
 
 /*Course button*/
 .buttons-coll {
-  width: 90%;
+  
 
   text-align: center;
 }
@@ -212,6 +212,7 @@ button {
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
+  opacity: 0.5;
 }
 /**** BTN No. 1 ****/
 .btn-1 {border: 0.5px solid #000;}
